<resources>
    <string name="app_name">Sale Book</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_suggest">Suggest</string>
    <string name="title_cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hoac">————HOẶC————</string>
    <string name="ng_k_t_i_kho_n">Đăng kí tài khoản</string>
    <string name="ban_chua_co_tk">Bạn chưa có tài khoản ?</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="dang_nhap_bang_fb">Đăng nhập bằng Facebook</string>
    <string name="quen_mk">Quên mật khẩu?</string>
    <string name="email_sdt">Email/Số điện thoại</string>
    <string name="nh_p_email_s_i_n_tho_i">  Nhập email/Số điện thoại</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="nh_p_m_t_kh_u">  Nhập mật khẩu</string>
    <string name="so_dien_thoai">Email</string>
    <string name="nhap_so_dien_thoai">Nhập email</string>
    <string name="dang_ki">Đăng Ký</string>
    <string name="ban_da_co_tai_khoan">Bạn đã có tài khoản?</string>
    <string name="dang_nhap_ngay">Đăng nhập ngay</string>
    <string name="thong_tin_sp">THÔNG TIN SẢN PHẨM</string>
    <string name="gioi_thieu_sach">7 Thói Quen Của Bạn Trẻ Thành Đạt được biên dịch từ tác phẩm nổi tiếng The 7 Habits of Highly Effective Teens của tác giả Sean Covey theo hợp đồng chuyển giao bản quyền với Tập đoàn Xuất bản Franklin Covey (Hoa Kỳ). Cuốn sách nhấn mạnh những gì chúng ta có được trong cuộc sống đều bắt nguồn từ những thói quen của chính mình. Ai cũng có những thói quen tốt và những thói quen xấu, và mỗi chúng ta phải rèn luyện những thói quen tốt và biết điều chỉnh, loại bỏ những thói quen xấu. Tuổi thiếu niên và trưởng thành là tuổi đẹp nhất và quan trọng nhất của đời người. Đây cũng là lứa tuổi mà các bạn trẻ bắt đầu khám phá cuộc sống với những ước mơ, khát vọng. Phía trước các bạn là những con đường bằng phẳng, êm ái; nhưng cũng có con đường quanh co, khúc khuỷu. Có con đường ngập tràn ánh sáng, cũng có con đường u ám, đầy cạm bẫy, nguy cơ. Nhưng làm cách nào để chọn được con đường đến đích thành công, hạnh phúc mà không lãng phí nhiều thời gian, công sức? Tất cả đều phụ thuộc vào tính cách và thói quen của các bạn. Có những thói quen đem đến sự thành công, hạnh phúc; nhưng cũng có những thói quen cản trở, phá hỏng sự phát triển của bạn.Cuốn sách phân tích tác động lớn lao của 7 thói quen quan trọng nhất của những bạn trẻ cần có. Đó là: Có thái độ sống tích cực; Biết định hướng tương lai; Việc hôm nay không để ngày mai; Tư duy cùng thắng; Biết lắng nghe để thấu hiểu và để được thấu hiểu; Có tinh thần hợp tác; Biết rèn luyện và phát triển những kỹ năng. Đây là những thói quen để các bạn tự rèn luyện bản thân và xây dựng các mối quan hệ của mình. Các thói quen này bổ sung và hỗ trợ chặt chẽ cho nhau, tạo một mắt xích bền vững giúp các bạn chọn lựa được hướng đi đúng đắn cho cuộc đời mình. Với phong cách ngắn gọn, vui tươi, dí dỏm, dễ hiểu, nhiều hình ảnh minh họa sinh động và dễ thương, 7 Thói Quen Của Bạn Trẻ Thành Đạt của Sean Covey đã được bạn đọc hoan nghênh và đón nhận nhiệt tình trên khắp thế giới. Đây là một trong những cuốn sách được các đọc giả trẻ yêu thích và đọc nhiều nhất, với số lượng phát hành lên đến hàng triệu bản trong một thời gian ngắn. Quả thật, 7 Thói Quen Của Bạn Trẻ Thành Đạt chính là chiếc la bàn, là kim chỉ nam giúp ta tránh được những thói quen tai hại nhằm xây dựng những thói quen tốt, hướng đến thành công. Đây không chỉ là một cuốn sách để đọc mà còn là một cẩm nang quý giá đưa bạn đến thành công, đạt được ước mơ của mình, xứng đáng với sự tin yêu của bạn bè, người thân, gia đình và xã hội. Báo chí nói gì về cuốn sách này: “Khác nhiều cuốn sách lý thuyết khô khan, tác phẩm The Seven Habits of Highly Effective Teens của Sean Covey với lối viết tươi vui, dí dỏm, ngắn gọn, dễ hiểu, rất nhiều mẩu chuyện thực tế và ý nghĩa, các bài thơ thú vị, hình ảnh minh họa dễ thương, sinh động vẫn đúc kết được bài học từ 7 thói quen của bạn trẻ thành đạt.” – Bài học từ 7 thói quen của bạn trẻ thành đạt (Zing News)</string>

    <string name="facebook_app_id">194619928490276</string>
    <string name="fb_login_protocol_scheme">fb194619928490276</string>
    <string name="comment">Cuốn Đắc Nhân Tâm của Dale Cannegie chắc chắn sẽ là một cuốn sâchs gối đầu giường đem đến thành công, hạnh phúc cho bất kì độc giả nào chăm chú đọc nó. Qua cuốn sách này, tác giả đã gửi gắm đến người đọc bài học về cách ứng xử hàng ngày, những phương pháp giao tiếp , nói chuyện sao cho phù hợp, hiệu quả nhất. Bạn có thể học được những kĩ năng mềm, những biện pháp tâm lý cần có trong mọi tình huống,... tất cả những điều ấy sẽ giúp bạn thành công hơn trong công việc cũng như cuộc sống hàng ngày. Còn về mặt hình thức, sách đẹp, bìa cứng rẩt bền, trang trọng, in ấn cũng rất ưng ý ! Fahasa giao hàng nhanh, đóng gói ổn, mình thật sự rất thích !</string>


</resources>
