<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.profile.LoginFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_sdt"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="10dp"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_email_sdt"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_edit_text"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:hint=" @string/nh_p_email_s_i_n_tho_i"
            android:inputType="textEmailAddress"></EditText>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/m_t_kh_u"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#808080">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/custom_edit_text"
            android:textSize="15sp"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:hint=" @string/nh_p_m_t_kh_u"
            android:inputType="textPassword"></EditText>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/btntext_quenmatkhau"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quen_mk"
        android:background="?attr/selectableItemBackground"
        android:textColor="#FF4500"
        android:textStyle="bold"
        android:gravity="right"
        android:layout_marginEnd="8dp"></TextView>
    <Button
        android:id="@+id/btn_dangnhap"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dang_nhap"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:background="@drawable/custom_button_dangnhap"
        android:layout_gravity="center"></Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login_hoac"
        android:gravity="center">
    </TextView>
    <Button
        android:id="@+id/btn_dangnhap_fb"
        android:background="@drawable/custon_button_dangnhapfb"
        android:layout_width="300dp"
        android:drawableLeft="@drawable/icon_facebook_circle"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/dang_nhap_bang_fb"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_weight="1"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ban_chua_co_tk"></TextView>
        <TextView
            android:layout_weight="1"
            android:id="@+id/tvDangKiTaiKhoan"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ng_k_t_i_kho_n"
            android:background="?attr/actionBarItemBackground"
            android:textColor="#FF4500"
            android:textStyle="bold"></TextView>
    </LinearLayout>

</LinearLayout>